# document_type_classification_ml

./: .gitignore  README.md  doc_classifier.py  hello.py  pyproject.toml  ref_descriptors.npy  requirements.txt  scanner.py
